--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
   "C_Cpp_Runner.enableWarnings": true,
   "C_Cpp_Runner.warningsAsError": false,
   "files.associations": {
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "random": "cpp",
+    "algorithm": "cpp"
   }
 }
